fix white space house and footer

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,4 +1,4 @@
-$color-primary: #ff6060;
+$color-primary: #FF6060;
 $color-background: #000000;
 $color-text: #ffffff;
 $radius: 10px;
