--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,10 +5,11 @@
 
 // Header styles
 .navbar {
-  margin: 2% 5% 2%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 2% 5% 2%;
+  padding: 0;
   &_logo {
     max-width: 10vw;
     height: auto;
@@ -23,30 +24,48 @@
     }
   }
   &_links {
-    min-width: 30%;
+    min-width: 20%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     @media screen and (max-width: $breakpoint-mobile) {
-      min-width: 45%;
+      min-width: 25%;
       text-transform: uppercase;
     }
     ul {
       width: 100%;
       display: flex;
       justify-content: space-between;
-      align-items: center;
-    }
-    li {
-      margin: 0 5% 0;
-      font-family: $font-family;
-      justify-content: space-between;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      li {
+        font-size: 1.2em;
+        font-family: $font-family;
+        justify-content: space-between;
+        &:not(:last-child) {
+          margin-right: 1rem;
+        }
+      }
     }
     &-link {
-      font-size: 1.2em;
+      text-decoration: none;
       color: $color-background;
       &:focus {
         border-bottom: 1px solid $color-background;
+      }
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
+// Responsive nav
+@media (min-width: 768px) {
+  .navbar {
+    &_links {
+      ul li {
+        display: flex;
+        justify-content: space-between;
       }
     }
   }
@@ -61,7 +80,6 @@
     border-radius: $radius;
     background-color: $color-background;
     position: relative;
-
     @media screen and (max-width: $breakpoint-mobile) {
       height: 111px;
     }
@@ -97,11 +115,7 @@
   padding: 3%;
   background-color: #f6f6f6;
   border-radius: $radius;
-  /*  @include flex-row;
-  flex-wrap: wrap;
-  justify-content: space-between; */
-  display: flex;
-  flex-direction: row;
+  @include flex-row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
@@ -151,24 +165,27 @@
 
 //// Modal
 .modal {
-  width: 80%;
+  width: 85%;
   height: auto;
   margin: 0 auto 2%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
+  @media screen and (max-width: $breakpoint-mobile) {
+    width: 90%;
+  }
   &__container {
-    margin: 5% 0 5%;
+    margin: 3% 0 3%;
     @include flex-row;
     justify-content: space-between;
     align-items: start;
-
     @media screen and (max-width: $breakpoint-mobile) {
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       min-width: 100%;
+      min-height: 20vh;
     }
   }
   &--housePage {
@@ -321,8 +338,8 @@
       color: #e3e3e3;
     }
     @media screen and (max-width: $breakpoint-mobile) {
-      max-width: 50%;
-      font-size: 1em;
+      max-width: 35%;
+      font-size: 1.6em;
     }
   }
   &_location {
@@ -340,9 +357,8 @@
 
 /// Tags test
 .house__tags {
-  margin-top: 3%;
-  display: flex;
-  flex-direction: row;
+  margin: 3% 0 2%;
+  @include flex-row;
   flex-wrap: wrap;
 }
 
@@ -359,10 +375,12 @@
 }
 .host {
   display: flex;
+  @media screen and (max-width: $breakpoint-mobile) {
+    margin-bottom: 5%;
+  }
   &__maincontainer {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     justify-content: space-evenly;
     &--picture {
       border-radius: 50%;
@@ -371,7 +389,7 @@
     @media screen and (max-width: $breakpoint-mobile) {
       flex-direction: row-reverse;
       justify-content: space-between;
-      margin-top: 3%;
+      margin-top: 1em;
     }
   }
   &__container {
@@ -478,7 +496,7 @@
   flex-shrink: 0;
   width: 100%;
   min-height: 30vh;
-  margin-top: auto;
+  margin-top: 3em;
   background-color: $color-background;
   color: $color-text;
   font-size: $font-size;
@@ -510,6 +528,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   &__content {
+    margin-top: 1em;
     width: 100%;
     min-height: 45vh;
     display: flex;
@@ -517,5 +536,13 @@
     justify-content: flex-start;
     justify-content: space-evenly;
     gap: 20px;
+  }
+}
+
+#modal_title-about {
+  height: calc(65px + 1vh);
+  @media screen and (max-width: $breakpoint-mobile) {
+    height: calc(40px + 1vh);
+    font-size: 10px;
   }
 }
